myparser.output
   0  $accept : %entry% $end

   1  program : many_declarations EOF

   2  many_declarations : declaration
   3                    | declaration many_declarations

   4  declaration : attribute_decl
   5              | one_class_decl
   6              | one_method_decl

   7  one_class_decl : CLASS ID LCURBRA list_members_decl RCURBRA
   8                 | CLASS ID EXTENDS ID LCURBRA list_members_decl RCURBRA

   9  one_method_decl : return_type ID DOUBLECOLON ID LPAREN list_params RPAREN block_stmt
  10                  | ID DOUBLECOLON ID LPAREN list_params RPAREN block_stmt

  11  list_members_decl :
  12                    | member_decl list_members_decl

  13  list_params :
  14              | combine_var_decl
  15              | combine_var_decl SEMICOLON another_param

  16  member_decl : attribute_decl
  17              | method_prototype

  18  combine_var_decl : list_id COLON value_type

  19  another_param : combine_var_decl
  20                | combine_var_decl SEMICOLON another_param

  21  list_attributes_decl : attribute_decl
  22                       | attribute_decl list_attributes_decl

  23  list_statements : statement
  24                  | statement list_statements

  25  attribute_decl : variables_decl
  26                 | constants_decl

  27  method_prototype : one_method
  28                   | constructor

  29  variables_decl : list_id COLON value_type SEMICOLON

  30  constants_decl : ID ASSIGN_CONST expr SEMICOLON

  31  list_id : ID
  32          | ID COMMA list_id

  33  one_method : return_type ID LPAREN list_params RPAREN SEMICOLON

  34  constructor : ID LPAREN list_params RPAREN SEMICOLON

  35  list_expr : expr
  36            | expr COMMA list_expr

  37  statement : block_stmt
  38            | assignment_stmt
  39            | if_stmt
  40            | WHILE expr DO statement
  41            | REPEAT list_statements UNTIL expr SEMICOLON
  42            | for_stmt
  43            | BREAK SEMICOLON
  44            | CONTINUE SEMICOLON
  45            | RETURN expr SEMICOLON
  46            | method_invocation_stmt

  47  block_stmt : LCURBRA RCURBRA
  48             | LCURBRA list_statements RCURBRA
  49             | LCURBRA list_attributes_decl RCURBRA
  50             | LCURBRA bullshit_list RCURBRA

  51  bullshit_list : attribute_decl bullshit_list
  52                | attribute_decl list_statements

  53  assignment_stmt : lhs ASSIGN expr SEMICOLON

  54  lhs : ID
  55      | expr DOT ID
  56      | expr LSQBRA expr RSQBRA

  57  if_stmt : IF expr THEN statement
  58          | IF expr THEN statement ELSE statement

  59  for_stmt : FOR ID ASSIGN expr TO expr DO statement
  60           | FOR ID ASSIGN expr DOWNTO expr DO statement

  61  method_invocation_stmt : expr DOT ID LPAREN list_expr RPAREN SEMICOLON
  62                         | expr DOT ID LPAREN RPAREN SEMICOLON

  63  expr : ID
  64       | INT_LIT
  65       | FLOAT_LIT
  66       | BOOL_LIT
  67       | STRING_LIT
  68       | SELF
  69       | NULL
  70       | LPAREN expr RPAREN
  71       | arithmetic_expr
  72       | boolean_expr
  73       | relational_expr
  74       | expr CONCAT expr
  75       | expr LSQBRA expr RSQBRA
  76       | member_access
  77       | object_creation

  78  arithmetic_expr : ADD expr
  79                  | SUB expr
  80                  | expr ADD expr
  81                  | expr SUB expr
  82                  | expr MUL expr
  83                  | expr INT_DIV expr
  84                  | expr FLOAT_DIV expr
  85                  | expr MOD expr

  86  boolean_expr : expr LOGIC_AND expr
  87               | expr LOGIC_OR expr
  88               | LOGIC_NOT expr

  89  relational_expr : expr EQUAL expr
  90                  | expr NEQUAL expr
  91                  | expr GREATER expr
  92                  | expr LESS expr
  93                  | expr GREATER_EQUAL expr
  94                  | expr LESS_EQUAL expr

  95  member_access : expr DOT ID
  96                | expr DOT ID LPAREN RPAREN
  97                | expr DOT ID LPAREN list_expr RPAREN

  98  object_creation : NEW ID LPAREN RPAREN
  99                  | NEW ID LPAREN list_expr RPAREN

 100  return_type : value_type
 101              | VOID

 102  value_type : element_type
 103             | array

 104  array : element_type LSQBRA INT_LIT RSQBRA

 105  element_type : primitive
 106               | classtype

 107  primitive : INTEGER
 108            | FLOAT
 109            | STRING
 110            | BOOL

 111  classtype : ID

 112  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (112)

	ID  shift 3
	INTEGER  shift 4
	BOOL  shift 5
	STRING  shift 6
	FLOAT  shift 7
	VOID  shift 8
	CLASS  shift 9
	.  error

	program  goto 10
	many_declarations  goto 11
	declaration  goto 12
	attribute_decl  goto 13
	one_class_decl  goto 14
	one_method_decl  goto 15
	return_type  goto 16
	list_id  goto 17
	value_type  goto 18
	variables_decl  goto 19
	constants_decl  goto 20
	element_type  goto 21
	array  goto 22
	primitive  goto 23
	classtype  goto 24


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	one_method_decl : ID . DOUBLECOLON ID LPAREN list_params RPAREN block_stmt  (10)
	constants_decl : ID . ASSIGN_CONST expr SEMICOLON  (30)
	list_id : ID .  (31)
	list_id : ID . COMMA list_id  (32)
	classtype : ID .  (111)

	DOUBLECOLON  shift 25
	COMMA  shift 26
	ASSIGN_CONST  shift 27
	ID  reduce 111
	LSQBRA  reduce 111
	COLON  reduce 31


state 4
	primitive : INTEGER .  (107)

	.  reduce 107


state 5
	primitive : BOOL .  (110)

	.  reduce 110


state 6
	primitive : STRING .  (109)

	.  reduce 109


state 7
	primitive : FLOAT .  (108)

	.  reduce 108


state 8
	return_type : VOID .  (101)

	.  reduce 101


state 9
	one_class_decl : CLASS . ID LCURBRA list_members_decl RCURBRA  (7)
	one_class_decl : CLASS . ID EXTENDS ID LCURBRA list_members_decl RCURBRA  (8)

	ID  shift 28
	.  error


state 10
	%entry% : '\001' program .  (112)

	.  reduce 112


state 11
	program : many_declarations . EOF  (1)

	EOF  shift 29
	.  error


state 12
	many_declarations : declaration .  (2)
	many_declarations : declaration . many_declarations  (3)

	ID  shift 3
	INTEGER  shift 4
	BOOL  shift 5
	STRING  shift 6
	FLOAT  shift 7
	VOID  shift 8
	CLASS  shift 9
	EOF  reduce 2

	many_declarations  goto 30
	declaration  goto 12
	attribute_decl  goto 13
	one_class_decl  goto 14
	one_method_decl  goto 15
	return_type  goto 16
	list_id  goto 17
	value_type  goto 18
	variables_decl  goto 19
	constants_decl  goto 20
	element_type  goto 21
	array  goto 22
	primitive  goto 23
	classtype  goto 24


state 13
	declaration : attribute_decl .  (4)

	.  reduce 4


state 14
	declaration : one_class_decl .  (5)

	.  reduce 5


state 15
	declaration : one_method_decl .  (6)

	.  reduce 6


state 16
	one_method_decl : return_type . ID DOUBLECOLON ID LPAREN list_params RPAREN block_stmt  (9)

	ID  shift 31
	.  error


state 17
	variables_decl : list_id . COLON value_type SEMICOLON  (29)

	COLON  shift 32
	.  error


state 18
	return_type : value_type .  (100)

	.  reduce 100


state 19
	attribute_decl : variables_decl .  (25)

	.  reduce 25


state 20
	attribute_decl : constants_decl .  (26)

	.  reduce 26


state 21
	value_type : element_type .  (102)
	array : element_type . LSQBRA INT_LIT RSQBRA  (104)

	LSQBRA  shift 33
	ID  reduce 102
	RPAREN  reduce 102
	SEMICOLON  reduce 102


state 22
	value_type : array .  (103)

	.  reduce 103


state 23
	element_type : primitive .  (105)

	.  reduce 105


state 24
	element_type : classtype .  (106)

	.  reduce 106


state 25
	one_method_decl : ID DOUBLECOLON . ID LPAREN list_params RPAREN block_stmt  (10)

	ID  shift 34
	.  error


state 26
	list_id : ID COMMA . list_id  (32)

	ID  shift 35
	.  error

	list_id  goto 36


state 27
	constants_decl : ID ASSIGN_CONST . expr SEMICOLON  (30)

	ID  shift 37
	LPAREN  shift 38
	STRING_LIT  shift 39
	FLOAT_LIT  shift 40
	INT_LIT  shift 41
	BOOL_LIT  shift 42
	NULL  shift 43
	SELF  shift 44
	NEW  shift 45
	ADD  shift 46
	SUB  shift 47
	LOGIC_NOT  shift 48
	.  error

	expr  goto 49
	arithmetic_expr  goto 50
	boolean_expr  goto 51
	relational_expr  goto 52
	member_access  goto 53
	object_creation  goto 54


state 28
	one_class_decl : CLASS ID . LCURBRA list_members_decl RCURBRA  (7)
	one_class_decl : CLASS ID . EXTENDS ID LCURBRA list_members_decl RCURBRA  (8)

	LCURBRA  shift 55
	EXTENDS  shift 56
	.  error


state 29
	program : many_declarations EOF .  (1)

	.  reduce 1


state 30
	many_declarations : declaration many_declarations .  (3)

	.  reduce 3


state 31
	one_method_decl : return_type ID . DOUBLECOLON ID LPAREN list_params RPAREN block_stmt  (9)

	DOUBLECOLON  shift 57
	.  error


state 32
	variables_decl : list_id COLON . value_type SEMICOLON  (29)

	ID  shift 58
	INTEGER  shift 4
	BOOL  shift 5
	STRING  shift 6
	FLOAT  shift 7
	.  error

	value_type  goto 59
	element_type  goto 21
	array  goto 22
	primitive  goto 23
	classtype  goto 24


state 33
	array : element_type LSQBRA . INT_LIT RSQBRA  (104)

	INT_LIT  shift 60
	.  error


state 34
	one_method_decl : ID DOUBLECOLON ID . LPAREN list_params RPAREN block_stmt  (10)

	LPAREN  shift 61
	.  error


state 35
	list_id : ID .  (31)
	list_id : ID . COMMA list_id  (32)

	COMMA  shift 26
	COLON  reduce 31


state 36
	list_id : ID COMMA list_id .  (32)

	.  reduce 32


state 37
	expr : ID .  (63)

	.  reduce 63


state 38
	expr : LPAREN . expr RPAREN  (70)

	ID  shift 37
	LPAREN  shift 38
	STRING_LIT  shift 39
	FLOAT_LIT  shift 40
	INT_LIT  shift 41
	BOOL_LIT  shift 42
	NULL  shift 43
	SELF  shift 44
	NEW  shift 45
	ADD  shift 46
	SUB  shift 47
	LOGIC_NOT  shift 48
	.  error

	expr  goto 62
	arithmetic_expr  goto 50
	boolean_expr  goto 51
	relational_expr  goto 52
	member_access  goto 53
	object_creation  goto 54


state 39
	expr : STRING_LIT .  (67)

	.  reduce 67


state 40
	expr : FLOAT_LIT .  (65)

	.  reduce 65


state 41
	expr : INT_LIT .  (64)

	.  reduce 64


state 42
	expr : BOOL_LIT .  (66)

	.  reduce 66


state 43
	expr : NULL .  (69)

	.  reduce 69


state 44
	expr : SELF .  (68)

	.  reduce 68


state 45
	object_creation : NEW . ID LPAREN RPAREN  (98)
	object_creation : NEW . ID LPAREN list_expr RPAREN  (99)

	ID  shift 63
	.  error


state 46
	arithmetic_expr : ADD . expr  (78)

	ID  shift 37
	LPAREN  shift 38
	STRING_LIT  shift 39
	FLOAT_LIT  shift 40
	INT_LIT  shift 41
	BOOL_LIT  shift 42
	NULL  shift 43
	SELF  shift 44
	NEW  shift 45
	ADD  shift 46
	SUB  shift 47
	LOGIC_NOT  shift 48
	.  error

	expr  goto 64
	arithmetic_expr  goto 50
	boolean_expr  goto 51
	relational_expr  goto 52
	member_access  goto 53
	object_creation  goto 54


state 47
	arithmetic_expr : SUB . expr  (79)

	ID  shift 37
	LPAREN  shift 38
	STRING_LIT  shift 39
	FLOAT_LIT  shift 40
	INT_LIT  shift 41
	BOOL_LIT  shift 42
	NULL  shift 43
	SELF  shift 44
	NEW  shift 45
	ADD  shift 46
	SUB  shift 47
	LOGIC_NOT  shift 48
	.  error

	expr  goto 65
	arithmetic_expr  goto 50
	boolean_expr  goto 51
	relational_expr  goto 52
	member_access  goto 53
	object_creation  goto 54


state 48
	boolean_expr : LOGIC_NOT . expr  (88)

	ID  shift 37
	LPAREN  shift 38
	STRING_LIT  shift 39
	FLOAT_LIT  shift 40
	INT_LIT  shift 41
	BOOL_LIT  shift 42
	NULL  shift 43
	SELF  shift 44
	NEW  shift 45
	ADD  shift 46
	SUB  shift 47
	LOGIC_NOT  shift 48
	.  error

	expr  goto 66
	arithmetic_expr  goto 50
	boolean_expr  goto 51
	relational_expr  goto 52
	member_access  goto 53
	object_creation  goto 54


state 49
	constants_decl : ID ASSIGN_CONST expr . SEMICOLON  (30)
	expr : expr . CONCAT expr  (74)
	expr : expr . LSQBRA expr RSQBRA  (75)
	arithmetic_expr : expr . ADD expr  (80)
	arithmetic_expr : expr . SUB expr  (81)
	arithmetic_expr : expr . MUL expr  (82)
	arithmetic_expr : expr . INT_DIV expr  (83)
	arithmetic_expr : expr . FLOAT_DIV expr  (84)
	arithmetic_expr : expr . MOD expr  (85)
	boolean_expr : expr . LOGIC_AND expr  (86)
	boolean_expr : expr . LOGIC_OR expr  (87)
	relational_expr : expr . EQUAL expr  (89)
	relational_expr : expr . NEQUAL expr  (90)
	relational_expr : expr . GREATER expr  (91)
	relational_expr : expr . LESS expr  (92)
	relational_expr : expr . GREATER_EQUAL expr  (93)
	relational_expr : expr . LESS_EQUAL expr  (94)
	member_access : expr . DOT ID  (95)
	member_access : expr . DOT ID LPAREN RPAREN  (96)
	member_access : expr . DOT ID LPAREN list_expr RPAREN  (97)

	LSQBRA  shift 67
	SEMICOLON  shift 68
	DOT  shift 69
	ADD  shift 70
	SUB  shift 71
	MUL  shift 72
	INT_DIV  shift 73
	FLOAT_DIV  shift 74
	MOD  shift 75
	LESS  shift 76
	LESS_EQUAL  shift 77
	NEQUAL  shift 78
	CONCAT  shift 79
	EQUAL  shift 80
	GREATER  shift 81
	GREATER_EQUAL  shift 82
	LOGIC_AND  shift 83
	LOGIC_OR  shift 84
	.  error


state 50
	expr : arithmetic_expr .  (71)

	.  reduce 71


state 51
	expr : boolean_expr .  (72)

	.  reduce 72


state 52
	expr : relational_expr .  (73)

	.  reduce 73


state 53
	expr : member_access .  (76)

	.  reduce 76


state 54
	expr : object_creation .  (77)

	.  reduce 77


state 55
	one_class_decl : CLASS ID LCURBRA . list_members_decl RCURBRA  (7)
	list_members_decl : .  (11)

	ID  shift 85
	INTEGER  shift 4
	BOOL  shift 5
	STRING  shift 6
	FLOAT  shift 7
	VOID  shift 8
	RCURBRA  reduce 11

	attribute_decl  goto 86
	list_members_decl  goto 87
	return_type  goto 88
	member_decl  goto 89
	method_prototype  goto 90
	list_id  goto 17
	value_type  goto 18
	variables_decl  goto 19
	constants_decl  goto 20
	one_method  goto 91
	constructor  goto 92
	element_type  goto 21
	array  goto 22
	primitive  goto 23
	classtype  goto 24


state 56
	one_class_decl : CLASS ID EXTENDS . ID LCURBRA list_members_decl RCURBRA  (8)

	ID  shift 93
	.  error


state 57
	one_method_decl : return_type ID DOUBLECOLON . ID LPAREN list_params RPAREN block_stmt  (9)

	ID  shift 94
	.  error


state 58
	classtype : ID .  (111)

	.  reduce 111


state 59
	variables_decl : list_id COLON value_type . SEMICOLON  (29)

	SEMICOLON  shift 95
	.  error


state 60
	array : element_type LSQBRA INT_LIT . RSQBRA  (104)

	RSQBRA  shift 96
	.  error


state 61
	one_method_decl : ID DOUBLECOLON ID LPAREN . list_params RPAREN block_stmt  (10)
	list_params : .  (13)

	ID  shift 35
	RPAREN  reduce 13

	list_params  goto 97
	combine_var_decl  goto 98
	list_id  goto 99


state 62
	expr : LPAREN expr . RPAREN  (70)
	expr : expr . CONCAT expr  (74)
	expr : expr . LSQBRA expr RSQBRA  (75)
	arithmetic_expr : expr . ADD expr  (80)
	arithmetic_expr : expr . SUB expr  (81)
	arithmetic_expr : expr . MUL expr  (82)
	arithmetic_expr : expr . INT_DIV expr  (83)
	arithmetic_expr : expr . FLOAT_DIV expr  (84)
	arithmetic_expr : expr . MOD expr  (85)
	boolean_expr : expr . LOGIC_AND expr  (86)
	boolean_expr : expr . LOGIC_OR expr  (87)
	relational_expr : expr . EQUAL expr  (89)
	relational_expr : expr . NEQUAL expr  (90)
	relational_expr : expr . GREATER expr  (91)
	relational_expr : expr . LESS expr  (92)
	relational_expr : expr . GREATER_EQUAL expr  (93)
	relational_expr : expr . LESS_EQUAL expr  (94)
	member_access : expr . DOT ID  (95)
	member_access : expr . DOT ID LPAREN RPAREN  (96)
	member_access : expr . DOT ID LPAREN list_expr RPAREN  (97)

	RPAREN  shift 100
	LSQBRA  shift 67
	DOT  shift 69
	ADD  shift 70
	SUB  shift 71
	MUL  shift 72
	INT_DIV  shift 73
	FLOAT_DIV  shift 74
	MOD  shift 75
	LESS  shift 76
	LESS_EQUAL  shift 77
	NEQUAL  shift 78
	CONCAT  shift 79
	EQUAL  shift 80
	GREATER  shift 81
	GREATER_EQUAL  shift 82
	LOGIC_AND  shift 83
	LOGIC_OR  shift 84
	.  error


state 63
	object_creation : NEW ID . LPAREN RPAREN  (98)
	object_creation : NEW ID . LPAREN list_expr RPAREN  (99)

	LPAREN  shift 101
	.  error


state 64
	expr : expr . CONCAT expr  (74)
	expr : expr . LSQBRA expr RSQBRA  (75)
	arithmetic_expr : ADD expr .  (78)
	arithmetic_expr : expr . ADD expr  (80)
	arithmetic_expr : expr . SUB expr  (81)
	arithmetic_expr : expr . MUL expr  (82)
	arithmetic_expr : expr . INT_DIV expr  (83)
	arithmetic_expr : expr . FLOAT_DIV expr  (84)
	arithmetic_expr : expr . MOD expr  (85)
	boolean_expr : expr . LOGIC_AND expr  (86)
	boolean_expr : expr . LOGIC_OR expr  (87)
	relational_expr : expr . EQUAL expr  (89)
	relational_expr : expr . NEQUAL expr  (90)
	relational_expr : expr . GREATER expr  (91)
	relational_expr : expr . LESS expr  (92)
	relational_expr : expr . GREATER_EQUAL expr  (93)
	relational_expr : expr . LESS_EQUAL expr  (94)
	member_access : expr . DOT ID  (95)
	member_access : expr . DOT ID LPAREN RPAREN  (96)
	member_access : expr . DOT ID LPAREN list_expr RPAREN  (97)

	LSQBRA  shift 67
	DOT  shift 69
	RPAREN  reduce 78
	RSQBRA  reduce 78
	SEMICOLON  reduce 78
	COMMA  reduce 78
	THEN  reduce 78
	TO  reduce 78
	DO  reduce 78
	DOWNTO  reduce 78
	ADD  reduce 78
	SUB  reduce 78
	MUL  reduce 78
	INT_DIV  reduce 78
	FLOAT_DIV  reduce 78
	MOD  reduce 78
	LESS  reduce 78
	LESS_EQUAL  reduce 78
	NEQUAL  reduce 78
	CONCAT  reduce 78
	EQUAL  reduce 78
	GREATER  reduce 78
	GREATER_EQUAL  reduce 78
	LOGIC_AND  reduce 78
	LOGIC_OR  reduce 78


state 65
	expr : expr . CONCAT expr  (74)
	expr : expr . LSQBRA expr RSQBRA  (75)
	arithmetic_expr : SUB expr .  (79)
	arithmetic_expr : expr . ADD expr  (80)
	arithmetic_expr : expr . SUB expr  (81)
	arithmetic_expr : expr . MUL expr  (82)
	arithmetic_expr : expr . INT_DIV expr  (83)
	arithmetic_expr : expr . FLOAT_DIV expr  (84)
	arithmetic_expr : expr . MOD expr  (85)
	boolean_expr : expr . LOGIC_AND expr  (86)
	boolean_expr : expr . LOGIC_OR expr  (87)
	relational_expr : expr . EQUAL expr  (89)
	relational_expr : expr . NEQUAL expr  (90)
	relational_expr : expr . GREATER expr  (91)
	relational_expr : expr . LESS expr  (92)
	relational_expr : expr . GREATER_EQUAL expr  (93)
	relational_expr : expr . LESS_EQUAL expr  (94)
	member_access : expr . DOT ID  (95)
	member_access : expr . DOT ID LPAREN RPAREN  (96)
	member_access : expr . DOT ID LPAREN list_expr RPAREN  (97)

	LSQBRA  shift 67
	DOT  shift 69
	RPAREN  reduce 79
	RSQBRA  reduce 79
	SEMICOLON  reduce 79
	COMMA  reduce 79
	THEN  reduce 79
	TO  reduce 79
	DO  reduce 79
	DOWNTO  reduce 79
	ADD  reduce 79
	SUB  reduce 79
	MUL  reduce 79
	INT_DIV  reduce 79
	FLOAT_DIV  reduce 79
	MOD  reduce 79
	LESS  reduce 79
	LESS_EQUAL  reduce 79
	NEQUAL  reduce 79
	CONCAT  reduce 79
	EQUAL  reduce 79
	GREATER  reduce 79
	GREATER_EQUAL  reduce 79
	LOGIC_AND  reduce 79
	LOGIC_OR  reduce 79


state 66
	expr : expr . CONCAT expr  (74)
	expr : expr . LSQBRA expr RSQBRA  (75)
	arithmetic_expr : expr . ADD expr  (80)
	arithmetic_expr : expr . SUB expr  (81)
	arithmetic_expr : expr . MUL expr  (82)
	arithmetic_expr : expr . INT_DIV expr  (83)
	arithmetic_expr : expr . FLOAT_DIV expr  (84)
	arithmetic_expr : expr . MOD expr  (85)
	boolean_expr : expr . LOGIC_AND expr  (86)
	boolean_expr : expr . LOGIC_OR expr  (87)
	boolean_expr : LOGIC_NOT expr .  (88)
	relational_expr : expr . EQUAL expr  (89)
	relational_expr : expr . NEQUAL expr  (90)
	relational_expr : expr . GREATER expr  (91)
	relational_expr : expr . LESS expr  (92)
	relational_expr : expr . GREATER_EQUAL expr  (93)
	relational_expr : expr . LESS_EQUAL expr  (94)
	member_access : expr . DOT ID  (95)
	member_access : expr . DOT ID LPAREN RPAREN  (96)
	member_access : expr . DOT ID LPAREN list_expr RPAREN  (97)
